--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Ignore log files
+*.log
+
+# Ignore temporary files
+*.tmp
+
+# Ignore compiled binaries
+*.exe
+*.dll
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
+
+# Ignore build artifacts
+/build/
+/dist/
+
+.next/
+
+package-lock.json
 node_modules
